--- a/templates/calendrier.html
+++ b/templates/calendrier.html
@@ -74,7 +74,7 @@
                         <td class="d-none d-lg-table-cell" style="font-size: 70%;">{{ intervention.maintenance.equipement.description or 'Aucune description' }}</td>
                         <td style="font-size: 70%;">
                             <span class="d-none d-sm-inline">{{ intervention.maintenance.titre }}</span>
-                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre[:30] }}{% if intervention.maintenance.titre|length > 30 %}...{% endif %}</span>
+                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre }}</span>
                         </td>
                         <td style="font-size: 70%;">
                             <span class="badge bg-{{ 'success' if intervention.statut == 'realisee' else 'warning' if intervention.statut == 'planifiee' else 'secondary' }}" style="font-size: 65%;">
@@ -220,7 +220,7 @@
                         <td class="d-none d-lg-table-cell" style="font-size: 70%;">{{ intervention.maintenance.equipement.description or 'Aucune description' }}</td>
                         <td style="font-size: 70%;">
                             <span class="d-none d-sm-inline">{{ intervention.maintenance.titre }}</span>
-                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre[:30] }}{% if intervention.maintenance.titre|length > 30 %}...{% endif %}</span>
+                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre }}</span>
                         </td>
                         <td style="font-size: 70%;">
                             <span class="badge bg-{{ 'success' if intervention.statut == 'realisee' else 'warning' if intervention.statut == 'planifiee' else 'secondary' }}" style="font-size: 65%;">
@@ -366,7 +366,7 @@
                         <td class="d-none d-lg-table-cell" style="font-size: 70%;">{{ intervention.maintenance.equipement.description or 'Aucune description' }}</td>
                         <td style="font-size: 70%;">
                             <span class="d-none d-sm-inline">{{ intervention.maintenance.titre }}</span>
-                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre[:30] }}{% if intervention.maintenance.titre|length > 30 %}...{% endif %}</span>
+                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre }}</span>
                         </td>
                         <td style="font-size: 70%;">
                             <span class="badge bg-{{ 'success' if intervention.statut == 'realisee' else 'warning' if intervention.statut == 'planifiee' else 'secondary' }}" style="font-size: 65%;">
@@ -515,7 +515,7 @@
                         <td class="d-none d-lg-table-cell" style="font-size: 70%;">{{ intervention.maintenance.equipement.description or 'Aucune description' }}</td>
                         <td style="font-size: 70%;">
                             <span class="d-none d-sm-inline">{{ intervention.maintenance.titre }}</span>
-                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre[:30] }}{% if intervention.maintenance.titre|length > 30 %}...{% endif %}</span>
+                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre }}</span>
                         </td>
                         <td style="font-size: 70%;">
                             <span class="badge bg-{{ 'success' if intervention.statut == 'realisee' else 'warning' if intervention.statut == 'planifiee' else 'secondary' }}" style="font-size: 65%;">
@@ -670,7 +670,7 @@
                         <td class="d-none d-lg-table-cell" style="font-size: 70%;">{{ intervention.maintenance.equipement.description or 'Aucune description' }}</td>
                         <td style="font-size: 70%;">
                             <span class="d-none d-sm-inline">{{ intervention.maintenance.titre }}</span>
-                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre[:30] }}{% if intervention.maintenance.titre|length > 30 %}...{% endif %}</span>
+                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre }}</span>
                         </td>
                         <td style="font-size: 70%;">
                             <span class="badge bg-{{ 'success' if intervention.statut == 'realisee' else 'warning' if intervention.statut == 'planifiee' else 'secondary' }}" style="font-size: 65%;">
@@ -816,7 +816,7 @@
                         <td class="d-none d-lg-table-cell" style="font-size: 70%;">{{ intervention.maintenance.equipement.description or 'Aucune description' }}</td>
                         <td style="font-size: 70%;">
                             <span class="d-none d-sm-inline">{{ intervention.maintenance.titre }}</span>
-                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre[:30] }}{% if intervention.maintenance.titre|length > 30 %}...{% endif %}</span>
+                            <span class="d-sm-none" style="font-size: 60%;">{{ intervention.maintenance.titre }}</span>
                         </td>
                         <td style="font-size: 70%;">
                             <span class="badge bg-{{ 'success' if intervention.statut == 'realisee' else 'warning' if intervention.statut == 'planifiee' else 'secondary' }}" style="font-size: 65%;">
