--- a/templates/calendrier.html
+++ b/templates/calendrier.html
@@ -616,15 +616,6 @@
                         </div>
                     </div>
                     {% endfor %}
-                {% else %}
-                <tr>
-                    <td colspan="6" class="text-center">
-                        <div class="alert alert-info mb-0">
-                            <i class="fas fa-info-circle"></i> Aucune intervention CO7 planifiée pour cette semaine.
-                        </div>
-                    </td>
-                </tr>
-                {% endif %}
             </tbody>
         </table>
     </div>
@@ -921,6 +912,10 @@
         </table>
     </div>
     {% endif %}
+{% else %}
+<div class="alert alert-info">
+    <i class="fas fa-info-circle"></i> Aucune maintenance prévue cette semaine.
+</div>
 {% endif %}
 
 <!-- Modal pour les détails de maintenance -->
