--- a/templates/calendrier.html
+++ b/templates/calendrier.html
@@ -23,7 +23,7 @@
         </div>
         <form method="POST" action="{{ url_for('envoyer_rapport', date=semaine_lundi.strftime('%Y-%m-%d')) }}" class="d-inline">
             <button type="submit" class="btn btn-success btn-sm">
-                <i class="fas fa-file-pdf"></i>
+                <i class="fas fa-file-excel"></i>
                 <span class="d-none d-sm-inline ms-1">Envoyer le rapport</span>
             </button>
         </form>
